update blog post

--- a/content/blog/part-2-compare-data-warehouse-features.mdx
+++ b/content/blog/part-2-compare-data-warehouse-features.mdx
@@ -3,8 +3,9 @@ title: "Part 2: Comparing features and developer experience of data warehouses"
 publishedAt: '2024-09-27'
 isPublished: true
 tags: ['meta']
-description: Compare DuckDB and Apache DataFusion to choose the right tool for your data processing needs.
+description: Comparing features of Snowflake, BigQuery, Redshift Serverless and Databricks, AWS Athena
 toc: false
+seoImage: /images/blog/dwh/cover2.png
 ---
 
 
