--- a/content/blog/part-3-compare-data-warehouse-workload-performance-iceberg.mdx
+++ b/content/blog/part-3-compare-data-warehouse-workload-performance-iceberg.mdx
@@ -3,8 +3,9 @@ title: "Part 3: Comparing performance of data warehouses on Iceberg Tables"
 publishedAt: '2024-09-24'
 isPublished: false
 tags: ['meta']
-description: Compare DuckDB and Apache DataFusion to choose the right tool for your data processing needs.
+description: ""
 toc: false
+seoImage: /images/blog/dwh/cover2.png
 ---
 
 
